# lambda_ynab_bank_sync

./: .gitignore  README.md  template.yaml
app/: main.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/config/: config-development.json
app/services/: upbank_service.py  ynab_service.py
app/services/models/: ynab_models.py
app/sync/: sync_base.py  sync_factory.py  sync_upbank.py
app/tests/services/: test_upbank_service.py
app/utilities/: aws_ssm.py  config.py  environment.py
