[tool.poetry]
name = "ynab-bank-sync"
version = "0.1.0"
description = ""
authors = ["Gavin Soebiantoro <gavin@soebi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.7"
boto3 = "^1.26.129"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
